--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#"style="--i:10"><i class="fa-brands fa-instagram"></i></a>
 
             </div>
-            <a href="images/Black Modern Professional Resume.pdf" target="_blank" class="btn-box" download>Download resume</a>
+            <a href="images/Resume_1.png" class="btn-box" Download>Download resume</a>
         </div>
         <Span class="home-img-hover"></Span>
         <img class="pic" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFSLWjFwZ6aR5shg03n9_yiENMzmHAh-nI2w&usqp=CAU"/>
