--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h3>Hello, it's me</h3>
             <h1>Ramalakshmi</h1>
             <h3> I'm  <span class="text">Fronted developer</span></h3>
-            <p>I'm a web designer with extenxsive experience for over 2 years.
+            <p>I'm a web designer and fronted developer.
                 <br>experience is to create and websitedesign,fronted design.
             </p>
             <div class="home-sci">
