--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         </div>
         <Span class="home-img-hover"></Span>
-        <img class="pic" src="images/picture.jpg"/>
+        <img class="pic" src="images/picture.png"/>
       </section>
      
       <div class="row">
@@ -58,7 +58,7 @@
      
           <section class="about" id="about">
         <div class="about-img">
-            <img src="images/picture1.jpg">
+            <img src="images/picture1.png">
 
         </div>
       </section>
