--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                <!-- buttons-->
                <div class="button-container">
          <div class="button ">
-           <div class="right"><a href="https://www.figma.com/proto/opYq5hPcsEjNb0Cg9S3z7o/Untitled?type=design&t=hxvJ6r3s59ngaQaZ-1&scaling=scale-down&page-id=0%3A1&node-id=1-19&starting-point-node-id=1%3A2&mode=design">VIEW</a></div>
+           <div class="right"><a href="https://www.figma.com/proto/R3y4fM7eGPA0sVHjrWxD7y/Untitled?node-id=9-40&starting-point-node-id=9%3A40&scaling=scale-down&t=UP22LauSw9PEAgND-1">VIEW</a></div>
          </div>
          <div class="button label-blue">
            <div class="right"><a href="" target="_blank">VISIT LINK</a></div>
