--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
            <h2><a href="" target="_blank">Mobile App</a></h2>
           <P>mobile app (or mobile application) is a software application developed specifically for use on small, wireless computing devices, such as smartphones and tablets, rather than desktop or laptop computers.</p>
          </figcaption>
-         <a href="#"></a>
+         <a href="https://www.figma.com/proto/opYq5hPcsEjNb0Cg9S3z7o/Untitled?node-id=1-19&t=zRcRFWJY09MX7bMg-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2"></a>
        </figure>
                <!-- buttons-->
                <div class="button-container">
          <div class="button ">
-           <div class="right"><a href="https://www.figma.com/proto/R3y4fM7eGPA0sVHjrWxD7y/Untitled?node-id=9-40&starting-point-node-id=9%3A40&scaling=scale-down&t=UP22LauSw9PEAgND-1">VIEW</a></div>
+           <div class="right"><a href="https://www.figma.com/proto/opYq5hPcsEjNb0Cg9S3z7o/Untitled?node-id=1-19&t=15odqohU2l6jc81s-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2">VIEW</a></div>
          </div>
          <div class="button label-blue">
            <div class="right"><a href="" target="_blank">VISIT LINK</a></div>
